updated TestFilesCreator + other tests